--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -4,14 +4,21 @@
 "services": "SERVICES",
 "contact": "CONTACT",
 "location": "Location: Put Brodarice 6, 3rd floor, room 339 (opposite the door to Helen Doron School) Split, Croatia",
-"workinghours": "Working Hours:",
-"monday": "Monday: 9-11, 16-19",
-"tuesday": "Tuesday: CLOSED",
-"wednesday": "Wednesday: 9-11, 16-19",
-"thursday": "Thursday: CLOSED",
-"friday": "Friday: 9-11, 16-19",
-"saturday": "Saturday: CLOSED",
-"sunday": "Sunday: CLOSED",
+"workinghours": "Working Hours",
+"monday": "Monday",
+"mondaytime": "9-11, 16-19",
+"tuesday": "Tuesday",
+"tuesdaytime": "CLOSED",
+"wednesday": "Wednesday",
+"wednesdaytime": "9-11, 16-19",
+"thursday": "Thursday",
+"thursdaytime": "CLOSED",
+"friday": "Friday",
+"fridaytime": "9-11, 16-19",
+"saturday": "Saturday",
+"saturdaytime": "CLOSED",
+"sunday": "Sunday",
+"sundaytime": "CLOSED",
 "method": "Our Method",
 "step1": "MEDICAL HISTORY",
 "step1-text": "A conversation between doctor and patient. Let’s identify past, current and next methods of care.",
