--- a/src/locales/hr/translationHr.json
+++ b/src/locales/hr/translationHr.json
@@ -4,14 +4,21 @@
     "services": "USLUGE",
     "contact": "KONTAKT",
     "location": "Lokacija: Put Brodarice 6, 3. kat, soba 339 (nasuprot vrata za Helen Doron školu) Split, Croatia",
-    "workinghours": "Radno Vrijeme:",
-    "monday": "Ponedjeljak: 9-11, 16-19",
-    "tuesday": "Utorak: ZATVORENO",
-    "wednesday": "Srijeda: 9-11, 16-19",
-    "thursday": "Četvrtak: ZATVORENO",
-    "friday": "Petak: 9-11, 16-19",
-    "saturday": "Subota: ZATVORENO",
-    "sunday": "Nedjelja: ZATVORENO",
+    "workinghours": "Radno Vrijeme",
+    "monday": "Ponedjeljak",
+"mondaytime": "9-11, 16-19",
+"tuesday": "Utorak",
+"tuesdaytime": "ZATVORENO",
+"wednesday": "Srijeda",
+"wednesdaytime": "9-11, 16-19",
+"thursday": "Četvrtak",
+"thursdaytime": "ZATVORENO",
+"friday": "Petak",
+"fridaytime": "9-11, 16-19",
+"saturday": "Subota",
+"saturdaytime": "ZATVORENO",
+"sunday": "Nedjelja",
+"sundaytime": "ZATVORENO",
     "method": "Naša Metoda",
     "step1": "MEDICINSKA ANAMNEZA",
     "step1-text": "Razgovor između doktora i pacijenta. Utvrdimo prošle i trenutne ozljede te zdravstvene ciljeve pacijenta.",
