--- a/src/locales/hr/translationHr.json
+++ b/src/locales/hr/translationHr.json
@@ -31,5 +31,6 @@
     "about-slogan": "Najbolje vrijeme za otići kod kiropraktičara je odmah nakon rođenja, a drugo najbolje vrijeme je danas. Što čekate?",
     "about-text": "Dr. Miro Bandalo je doktor kiropraktike čija je misija da pomogne ljudima ostvariti svoj Bogom dani životni potencijal kroz zdravi način života. Nakon dva završena fakulteta u SAD-u je diplomirao kao doktor kiropraktike na prestižnom Life University, te je vodio tj otvorio dva ureda za kiropraktiku (San Luis Obispo, California te u Nolensville, Tennessee). Bandalo Kiropraktika je njegov treći ured koji je otvorio u Splitu jer je njegov cilj kroz kiropraktiku pomoći te obrazovati što više ljudi u Splitu i Hrvatskoj o važnosti zdrave kralježnice, i to počevši od najmlađeg doba. Zbog ovog razloga se specijalizirao za rad s trudnicama i djecom, jer ako počnemo zdravo i podržavamo to zdravlje od najranijih godina, onda razvijamo ljude koji zaista imaju priliku ostvariti svoj genetski potencijal, i imati puno godina u svom životu, a i puno života u svojim godinama. Dr Bandalo je svojim predanim radom pomogao te znatno poboljšao funkcionalnost i performansu članovima Hrvatske i Kanadske Olimpijske reprezentacije u atletici, svjetskim prvacima u Brazilskom Jiu jitsu-u, MMA, skoku u vis, squashu, olimpijskom dizanju utega te brojnim profesionalnim i rekreativnim sportašima.",
     "testimonials": "Recenzije",
-    "Instagram": "Pratite nas na Instagramu"
+    "Instagram": "Pratite nas na Instagramu",
+    "contact-info": "Pošaljite nam poruku ako želite više informacija"
     }
